Greedy search has a basic framework. No way to pass the desired action to the GameManager, need to figure out the flow here.